--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -134,6 +134,13 @@ jobs:
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=no BRANCH=edge"
 
+          - aa: 0017
+            board: khadas-vim2
+            desc: khadas-vim2, edge, regular CLI
+            runnerLabel: can-build-arm64
+            runnerLabelKernel: can-build-kernels
+            vars: "CLOUD_IMAGE=no BRANCH=edge"
+
           #          - aa: 0018
           #            board: t95z
           #            desc: t95z, current, regular CLI
@@ -162,6 +169,13 @@ jobs:
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=no BRANCH=edge"
 
+          - aa: 0022
+            board: khadas-vim3
+            desc: Khadas VIM3 (not L), edge, regular CLI
+            runnerLabel: can-build-arm64
+            runnerLabelKernel: can-build-kernels
+            vars: "CLOUD_IMAGE=no BRANCH=edge"
+
 
           # non-cloud desktop images for meson 64 HC4/N2
           #          - aa: 0960
@@ -186,8 +200,15 @@ jobs:
             vars: "CLOUD_IMAGE=no BRANCH=edge"
 
           - aa: 0971
-            board: odroidnhc4
+            board: odroidhc4
             desc: ODROID HC4, edge, regular CLI
+            runnerLabel: can-build-arm64
+            runnerLabelKernel: can-build-kernels
+            vars: "CLOUD_IMAGE=no BRANCH=edge"
+
+          - aa: 0971
+            board: odroidc4
+            desc: ODROID C4, edge, regular CLI
             runnerLabel: can-build-arm64
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=no BRANCH=edge"
