add `current` builds for rockpro64 and quartz64a; add `quartz64a-pgwipeout` edge

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -365,9 +365,30 @@ jobs:
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=no BRANCH=edge"
 
+          - aa: 0855
+            board: rockpro64
+            desc: RockPro64, cli, current
+            runnerLabel: can-build-arm64-others
+            runnerLabelKernel: can-build-kernels
+            vars: "CLOUD_IMAGE=no BRANCH=current"
+
           - aa: 0860
             board: quartz64a
             desc: quartz64a, cli, edge
+            runnerLabel: can-build-arm64-others
+            runnerLabelKernel: can-build-kernels
+            vars: "CLOUD_IMAGE=no BRANCH=edge"
+
+          - aa: 0865
+            board: quartz64a
+            desc: quartz64a, cli, current
+            runnerLabel: can-build-arm64-others
+            runnerLabelKernel: can-build-kernels
+            vars: "CLOUD_IMAGE=no BRANCH=current"
+
+          - aa: 0866
+            board: quartz64a-pgwipeout
+            desc: quartz64a-pgwipeout.wip, cli, edge
             runnerLabel: can-build-arm64-others
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=no BRANCH=edge"
