--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,365 +40,13 @@ jobs:
         # aa: GH Actions orders the jobs by the first key value. 'aa' should be first. it never is. it is actually quite pointless trying. it's effectively random.
 
         include:
-          ## desktop cinammon for uefi-arm64
-          #- aa: 0001
-          #  board: uefi-arm64
-          #  desc: UEFI Generic arm64, with -generic Ubuntu kernel (ddk), desktop cinnamon
-          #  runnerLabel: can-build-arm64
-          #  runnerLabelKernel: can-build-rootfs-only
-          #  vars: "CLOUD_IMAGE=no BRANCH=ddk BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=cinnamon DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
 
-          #- aa: 0002
-          #  board: uefi-arm64
-          #  desc: UEFI Generic arm64, with Armbian mainline kernel (current), desktop cinnamon
-          #  runnerLabel: can-build-arm64
-          #  runnerLabelKernel: can-build-kernels
-          #  vars: "CLOUD_IMAGE=no BRANCH=current BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=cinnamon DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
-
-          #- aa: 0003
-          #  board: uefi-arm64
-          #  desc: UEFI Generic arm64, with Armbian mainline kernel (edge), desktop cinnamon
-          #  runnerLabel: can-build-arm64
-          #  runnerLabelKernel: can-build-kernels
-          #  vars: "CLOUD_IMAGE=no BRANCH=edge BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=cinnamon DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
-
-          # e2img for oracle cloud
-          - aa: 0011
-            board: uefi-arm64
-            desc: UEFI Generic ARM64 Rescue e2img, edge, cloud image, user-data at /boot
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=yes ENABLE_EXTENSIONS=uefi-rescue BRANCH=edge"
-
-          - aa: 0011
-            board: uefi-arm64
-            desc: UEFI Generic arm64, with Armbian mainline kernel (edge), regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge "
-
-          - aa: 0012
-            board: uefi-arm64
-            desc: UEFI Generic ARM64 Rescue e2img, ddk, cloud image, user-data at /boot
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=yes ENABLE_EXTENSIONS=uefi-rescue BRANCH=ddk"
-
-          # @TODO: disabled, cant build on arm64 yet, still using their rkbins which is amd64 only
-          #- aa: 0005
-          #  board: odroidm1
-          #  desc: odroidm1, legacy, regular CLI, built on arm64
-          #  runnerLabel: can-build-arm64
-          #  runnerLabelKernel: can-build-kernels
-          #  vars: "CLOUD_IMAGE=no BRANCH=legacy"
-
-          - aa: 0006
-            board: odroidm1
-            desc: odroidm1, legacy, regular CLI #, built on x86
+          - aa: 0866
+            board: rock-5b
+            desc: rock-5b, cli, legacy (5.10, by @amazingfate), regular CLI
             runnerLabel: can-build-x86-huge
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=no BRANCH=legacy"
-
-          - aa: 0007
-            board: odroidm1
-            desc: odroidm1, edge, regular CLI #, built on x86
-            runnerLabel: can-build-x86-huge
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          - aa: 0013
-            board: lafrite
-            desc: lafrite, edge, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          - aa: 0014
-            board: lepotato
-            desc: lepotato, edge, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          - aa: 0015
-            board: nanopik2-s905
-            desc: nanopik2-s905, edge regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          - aa: 0016
-            board: radxa-zero
-            desc: radxa-zero, edge, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          - aa: 0016
-            board: radxa-zero2
-            desc: radxa-zero2, edge, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          - aa: 0017
-            board: odroidc2
-            desc: odroidc2, edge, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          - aa: 0017
-            board: khadas-vim2
-            desc: khadas-vim2, edge, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          - aa: 0017
-            board: khadas-vim1
-            desc: khadas-vim1, edge, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          #          - aa: 0018
-          #            board: t95z
-          #            desc: t95z, current, regular CLI
-          #            runnerLabel: can-build-arm64
-          #            runnerLabelKernel: can-build-kernels
-          #            vars: "CLOUD_IMAGE=no BRANCH=current"
-
-          - aa: 0019
-            board: t95z
-            desc: t95z, edge, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          #- aa: 0020
-          #  board: khadas-vim3l
-          #  desc: khadas-vim3l, current, regular CLI
-          #  runnerLabel: can-build-arm64
-          #  runnerLabelKernel: can-build-kernels
-          #  vars: "CLOUD_IMAGE=no BRANCH=current"
-
-          - aa: 0021
-            board: khadas-vim3l
-            desc: khadas-vim3l, edge, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          - aa: 0022
-            board: khadas-vim3
-            desc: Khadas VIM3 (not L), edge, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-
-          # non-cloud desktop images for meson 64 HC4/N2
-          #          - aa: 0960
-          #            board: odroidhc4
-          #            desc: ODROID HC4, xfce desktop, current
-          #            runnerLabel: can-build-arm64
-          #            runnerLabelKernel: can-build-kernels
-          #            vars: "CLOUD_IMAGE=no BRANCH=current BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=xfce DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
-
-          - aa: 0970
-            board: odroidn2
-            desc: ODROID N2+, edge, xfce desktop
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=xfce DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
-
-          - aa: 0971
-            board: odroidn2
-            desc: ODROID N2+, edge, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          - aa: 0971
-            board: odroidhc4
-            desc: ODROID HC4, edge, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          - aa: 0971
-            board: odroidc4
-            desc: ODROID C4, edge, regular CLI
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          # uefix-86 cloud
-          - aa: 0100
-            board: uefi-x86-meta
-            desc: UEFI Generic x86 cloud image, with Armbian mainline kernel (edge), for metadata-capable clouds (AWS/GCP/OCI/OpenStack/KVM/etc), includes external kernel and initrd for kexec
-            runnerLabel: can-build-x86 # lite image with kernel, but more widespread usage, so keep on native build for ow
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=yes BRANCH=edge"
-
-          - aa: 0150
-            board: uefi-x86-meta
-            desc: UEFI Generic x86 cloud image, with -generic Ubuntu kernel (ddk), for metadata-capable clouds (AWS/GCP/OCI/OpenStack/KVM/etc), includes external kernel and initrd for kexec
-            runnerLabel: can-build-x86 # no use cross compiling this, no kernel built
-            runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=yes BRANCH=ddk"
-
-          # rpi4b clouds and desktops
-          - aa: 0200
-            board: rpi4b
-            desc: Raspberry Pi 4B, with Armbian mainline kernel (edge), cloud image, user-data at /boot/firmware (FAT)
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=yes BRANCH=edge"
-
-          #          - aa: 0205
-          #            board: rpi4b
-          #            desc: Raspberry Pi 4B, ddk, desktop cinnamon
-          #            runnerLabel: can-build-arm64
-          #            runnerLabelKernel: can-build-rootfs-only
-          #            vars: "CLOUD_IMAGE=no BRANCH=ddk BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=cinnamon DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
-
-          #- aa: 0206
-          #  board: rpi4b
-          #  desc: Raspberry Pi 4B, edge, desktop cinnamon
-          #  runnerLabel: can-build-arm64
-          #  runnerLabelKernel: can-build-kernels
-          #  vars: "CLOUD_IMAGE=no BRANCH=edge BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=cinnamon DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
-
-          #          - aa: 0210
-          #            board: rpi4b
-          #            desc: Raspberry Pi 4B, using Ubuntu's raspi kernel (ddk), cloud image, user-data at /boot/firmware (FAT)
-          #            runnerLabel: can-build-arm64
-          #            runnerLabelKernel: can-build-rootfs-only
-          #            vars: "CLOUD_IMAGE=yes BRANCH=ddk"
-
-          - aa: 0300
-            board: uefi-arm64-meta
-            desc: UEFI Generic ARM64, with -generic Ubuntu kernel (ddk), cloud image for metadata-capable clouds (AWS/GCP/OCI/OpenStack/KVM/etc), includes external kernel and initrd for kexec
-            runnerLabel: can-build-arm64
-            runnerLabelKernel: can-build-rootfs-only
-            vars: "CLOUD_IMAGE=yes BRANCH=ddk"
-
-          #          - aa: 0301
-          #            board: uefi-x86
-          #            desc: UEFI Generic x86, with -generic Ubuntu kernel (ddk), desktop xfce
-          #            runnerLabel: can-build-x86
-          #            runnerLabelKernel: can-build-rootfs-only
-          #            vars: "CLOUD_IMAGE=no ENABLE_EXTENSIONS=image-output-ovf BRANCH=ddk BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=xfce DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
-
-          ## HUGE ## - aa: 0302
-          ## HUGE ##   board: uefi-x86
-          ## HUGE ##   desc: UEFI Generic x86, with Armbian mainline kernel (edge), desktop xfce
-          ## HUGE ##   runnerLabel: can-build-x86-huge # huge image, vmware too, kernel built.
-          ## HUGE ##   runnerLabelKernel: can-build-kernels
-          ## HUGE ##   vars: "CLOUD_IMAGE=no ENABLE_EXTENSIONS=image-output-ovf BRANCH=edge BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=\"\" DESKTOP_ENVIRONMENT=xfce DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
-
-          # - aa: 0310
-          #   board: uefi-x86
-          #   desc: UEFI Generic x86, with -generic Ubuntu kernel (ddk), cloud image, user-data at /boot/efi (FAT)
-          #   runnerLabel: can-build-x86
-          #   runnerLabelKernel: can-build-rootfs-only
-          #   vars: "CLOUD_IMAGE=yes ENABLE_EXTENSIONS=image-output-ovf BRANCH=ddk"
-
-          - aa: 0320
-            board: uefi-x86
-            desc: UEFI Generic x86, with Armbian mainline kernel (edge), regular CLI, also for UEFI-capable arm64 SBCs
-            runnerLabel: can-build-x86 # light image with kernel, VMWare image, low usage, good cross compile candidate
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no ENABLE_EXTENSIONS=image-output-ovf BRANCH=edge"
-
-
-          #- aa: 0320
-          #  board: uefi-x86
-          #  desc: UEFI Generic x86, with Armbian mainline kernel (edge), cloud image, user-data at /boot/efi (FAT)
-          #  runnerLabel: can-build-x86-others # light image with kernel, VMWare image, low usage, good cross compile candidate
-          #  runnerLabelKernel: can-build-kernels
-          #  vars: "CLOUD_IMAGE=yes ENABLE_EXTENSIONS=image-output-ovf BRANCH=edge"
-
-          # cloud images for meson 64 -- what branch is this? possibly duplicate?
-          # - aa: 0500
-          #   board: odroidhc4
-          #   desc: ODROID HC4, cloud image, user-data at /boot (ext4)
-          #   runnerLabel: can-build-arm64
-          #   runnerLabelKernel: can-build-kernels
-          #   vars: "CLOUD_IMAGE=yes"
-
-          #- aa: 0550
-          #  board: odroidn2
-          #  desc: ODROID N2+, cloud image, user-data at /boot (ext4)
-          #  runnerLabel: can-build-arm64
-          #  runnerLabelKernel: can-build-kernels
-          #  vars: "CLOUD_IMAGE=yes"
-
-          # random stuff
-          - aa: 0700
-            board: nanopct4
-            desc: nanopct4, cli, current
-            runnerLabel: can-build-arm64-others
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=current"
-
-          - aa: 0705
-            board: pine64
-            desc: PINE64, cli, current
-            runnerLabel: can-build-arm64-others
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=current"
-
-          - aa: 0710
-            board: tinkerboard-2
-            desc: Tinkerboard-2, edge, cli
-            runnerLabel: can-build-arm64-others
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          - aa: 0800
-            board: oneplus5
-            desc: OnePlus 5, fastboot-compatible, current, cloud image, user-data at /boot
-            runnerLabel: can-build-arm64-others
-            runnerLabelKernel: can-build-kernels # can-build-small-kernels # it's just as big as any other actually
-            vars: "CLOUD_IMAGE=yes BRANCH=current" # current is 5.10
-
-          - aa: 0850
-            board: rockpro64
-            desc: RockPro64, cli, edge
-            runnerLabel: can-build-arm64-others
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          - aa: 0855
-            board: rockpro64
-            desc: RockPro64, cli, current
-            runnerLabel: can-build-arm64-others
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=current"
-
-          - aa: 0860
-            board: quartz64a
-            desc: quartz64a, cli, edge
-            runnerLabel: can-build-arm64-others
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          - aa: 0865
-            board: quartz64a
-            desc: quartz64a, cli, current
-            runnerLabel: can-build-arm64-others
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=current"
-
-          - aa: 0866
-            board: quartz64a-pgwipeout
-            desc: quartz64a-pgwipeout.wip, cli, edge
-            runnerLabel: can-build-arm64-others
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
 
           - aa: 0867
             board: rock-5b
@@ -407,41 +55,7 @@ jobs:
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=yes BRANCH=legacy"
 
-          # non-cloud cli images for armhf stuff built on arm64
-          - aa: 0900
-            board: tinkerboard
-            desc: Tinkerboard, cli, edge
-            runnerLabel: can-build-arm64-others
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
 
-          - aa: 0950
-            board: helios4
-            desc: Helios4, cli, edge
-            runnerLabel: can-build-arm64-others
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          - aa: 0960
-            board: odroidxu4
-            desc: ODROID XU4, cli, edge
-            runnerLabel: can-build-arm64-others
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=edge"
-
-          - aa: 0970
-            board: cubox-i
-            desc: cubox-i, cli, current
-            runnerLabel: can-build-arm64-others
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=current"
-
-          - aa: 0980
-            board: clearfogbase
-            desc: clearfogbase, cli, current
-            runnerLabel: can-build-arm64-others
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=current"
 
     steps:
 
