use PAT for daily release, so that the release workflow is actually triggered
- see https://docs.github.com/en/actions/using-workflows/triggering-a-workflow#triggering-a-workflow-from-a-workflow

--- a/.github/workflows/daily-release.yml
+++ b/.github/workflows/daily-release.yml
@@ -13,4 +13,4 @@ jobs:
       - run: |
           gh release create "${{ steps.date.outputs.date }}a" --title "${{ steps.date.outputs.date }}a armbian-next auto dialy build" --notes "auto daily build" --repo $GITHUB_REPOSITORY
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT_FOR_ARMBIAN_RELEASE }}
