adapt generate-dockerfile to new cli

--- a/.github/workflows/main-to-docker-latest.yml
+++ b/.github/workflows/main-to-docker-latest.yml
@@ -1,4 +1,4 @@
-name: master-latest
+name: main-to-docker-latest
 
 on:
   push:
@@ -46,11 +46,10 @@ jobs:
       - name: Generate Dockerfile for ${{env.DOCKERFILE_OS}}:${{env.DOCKERFILE_RELEASE}} via Armbian helper script
         id: generate
         env:
-          DOCKERFILE_GENERATE_ONLY: "yes" # Just generate the Dockerfile, don't build
           DOCKER_ARMBIAN_BASE_IMAGE: "${{env.DOCKERFILE_OS}}:${{env.DOCKERFILE_RELEASE}}" # Use this base image
           DOCKERFILE_USE_ARMBIAN_IMAGE_AS_BASE: "no" # Do NOT use the Armbian image as base  image to speed up; we're creating it here
         run: |
-          bash ./docker.sh
+          bash ./compile.sh generate-dockerfile
 
       - name: Build and push
         id: docker_build
