--- a/.github/workflows/main-to-docker-latest.yml
+++ b/.github/workflows/main-to-docker-latest.yml
@@ -6,14 +6,27 @@ on:
   schedule:
     - cron: '0 3 * * *' # Scheduled runs every day at 3am UTC
 
-env:
-  DOCKERFILE_OS: ubuntu
-  DOCKERFILE_RELEASE: jammy
 
 jobs:
-  build-armbian-dockerfile:
+
+  "D": # short name because GH will expand with the matrix values
     runs-on: ubuntu-latest
     if: ${{ github.repository_owner == 'rpardini' }}
+    strategy:
+      fail-fast: false # let other jobs try to complete if one fails
+      matrix:
+        include:
+          - os: "ubuntu"
+            release: "jammy"
+          - os: "ubuntu"
+            release: "kinetic"
+          - os: "debian"
+            release: "bullseye"
+          - os: "debian"
+            release: "sid"
+    env:
+      DOCKERFILE_OS: "${{ matrix.os }}"
+      DOCKERFILE_RELEASE: "${{ matrix.release }}"
     steps:
 
       - name: Checkout build repo
@@ -51,13 +64,13 @@ jobs:
         run: |
           bash ./compile.sh generate-dockerfile
 
-      - name: Build and push
+      - name: Build and push ${{env.DOCKERFILE_OS}}:${{env.DOCKERFILE_RELEASE}}
         id: docker_build
         uses: docker/build-push-action@v3
         with:
           context: .
           file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64 # arm64 is done under qemu and is _very_ slow. Thanks, GitHub!
+          platforms: linux/amd64 # @TODO: reenable: ,linux/arm64 # arm64 is done under qemu and is _very_ slow. Thanks, GitHub!
           pull: true # Pull new version of base image, always; avoid bit-rot
           push: true
           labels: |
