--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,21 +67,6 @@ jobs:
           # 0200 = uefi stuff (fixed version)
           # 0500+ other stuff
 
-          ## ROCK 5b
-          #- aa: 0005
-          #  board: rock-5b
-          #  desc: rock-5b, cli, legacy (5.10, by @amazingfate), regular CLI
-          #  runnerLabel: can-build-arm64-others-rock5b
-          #  runnerLabelKernel: can-build-kernels
-          #  vars: "CLOUD_IMAGE=no BRANCH=legacy"
-
-          #- aa: 0010
-          #  board: rock-5b
-          #  desc: rock-5b, legacy (5.10, by @amazingfate), xfce desktop
-          #  runnerLabel: can-build-arm64-others-rock5b
-          #  runnerLabelKernel: can-build-kernels
-          #  vars: "CLOUD_IMAGE=no BRANCH=legacy  BUILD_DESKTOP=yes DESKTOP_APPGROUPS_SELECTED=browsers DESKTOP_ENVIRONMENT=xfce DESKTOP_ENVIRONMENT_CONFIG_NAME=config_base"
-
 
           - aa: 0110
             board: odroidn2
@@ -299,20 +284,12 @@ jobs:
           #  runnerLabelKernel: can-build-kernels
           #  vars: "CLOUD_IMAGE=yes ENABLE_EXTENSIONS=image-output-ovf BRANCH=edge"
 
-          # @TODO: disabled, cant build on arm64 yet, still using their rkbins which is amd64 only
-          #- aa: 0005
+          #- aa: 0705
           #  board: odroidm1
-          #  desc: odroidm1, legacy, regular CLI, built on arm64
-          #  runnerLabel: can-build-arm64
+          #  desc: odroidm1, legacy, regular CLI #, built on x86
+          #  runnerLabel: can-build-x86-huge
           #  runnerLabelKernel: can-build-kernels
           #  vars: "CLOUD_IMAGE=no BRANCH=legacy"
-
-          - aa: 0705
-            board: odroidm1
-            desc: odroidm1, legacy, regular CLI #, built on x86
-            runnerLabel: can-build-x86-huge
-            runnerLabelKernel: can-build-kernels
-            vars: "CLOUD_IMAGE=no BRANCH=legacy"
 
           - aa: 0710
             board: odroidm1
