--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -367,12 +367,12 @@ jobs:
             runnerLabelKernel: can-build-kernels
             vars: "CLOUD_IMAGE=no BRANCH=edge"
 
-          #- aa: 0800
-          #  board: oneplus5
-          #  desc: OnePlus 5, fastboot-compatible, current, cloud image, user-data at /boot
-          #  runnerLabel: can-build-arm64-others
-          #  runnerLabelKernel: can-build-kernels # can-build-small-kernels # it's just as big as any other actually
-          #  vars: "CLOUD_IMAGE=yes BRANCH=current" # current is 5.10
+          - aa: 0912
+            board: oneplus5
+            desc: OnePlus 5, fastboot-compatible, edge, CLI
+            runnerLabel: can-build-arm64-others
+            runnerLabelKernel: can-build-kernels # can-build-small-kernels # it's just as big as any other actually
+            vars: "CLOUD_IMAGE=no BRANCH=edge"
 
           - aa: 0915
             board: rockpro64
